infrastructure/03-apps/memos/manifests/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memos
  namespace: memos
  labels:
    app: memos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memos
  template:
    metadata:
      labels:
        app: memos
    spec:
      serviceAccountName: memos-vault-sa
      securityContext:
        runAsNonRoot: true
        runAsUser: 11761
        fsGroup: 11761
      containers:
        - name: memos
          image: neosmemo/memos:0.29.1
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            runAsNonRoot: true
            runAsUser: 11761
            seccompProfile:
              type: RuntimeDefault
          ports:
            - containerPort: 5230
              name: http
          volumeMounts:
            - name: data
              mountPath: /var/opt/memos
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: memos-pvc
