infrastructure/03-apps/memos/manifests/policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: memos-hardened
  namespace: memos
spec:
  endpointSelector:
    matchLabels:
      app: memos
  ingress:
    # 1. Traefik to Memos
    - fromEndpoints:
        - matchLabels: { "k8s:io.kubernetes.pod.namespace": traefik }
      toPorts:
        - ports: 
            - port: "5230"
              protocol: TCP
    # 2. Local Namespace Traffic
    - fromEndpoints:
        - matchLabels: { "k8s:io.kubernetes.pod.namespace": memos }
    # 3. Monitoring (Alloy)
    - fromEndpoints:
        - matchLabels: { "k8s:io.kubernetes.pod.namespace": alloy }
  egress:
    # 1. Local Namespace Traffic
    - toEndpoints:
        - matchLabels: { "k8s:io.kubernetes.pod.namespace": memos }
    # 2. DNS
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
      toPorts:
        - ports: [{ port: "53", protocol: ANY }]
          rules: { dns: [{ matchPattern: "*" }] }
    # 3. API Server
    - toEntities: [kube-apiserver]
    # 4. External access (Updates, Gravatar, etc.)
    - toEntities: [world]
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "80"
              protocol: TCP
